--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,13 +2,14 @@
 
 body {
   margin: 0;
+  background-color: #fafaf8;
 }
 
 #app {
   position: relative;
   .navbar {
     position: sticky;
-    background-color: aquamarine;
+    background-color: #d37b88;
     width: 100%;
     height: 60px;
     display: flex;
@@ -21,27 +22,54 @@ body {
     }
     .select__date {
       margin-right: 20px;
+      button {
+        padding: 10px;
+        border: 2px solid #000000;
+        background-color: transparent;
+        font-family: "Roboto Mono", monospace;
+        font-weight: 500;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+      .al-azar {
+        margin-right: 10px;
+      }
     }
+  }
+  .vc-container {
+    position: absolute;
+    z-index: 999;
+    right: 20px;
   }
   .home {
     padding: 20px;
+    text-align: center;
     &__title {
       font-family: "Roboto Mono", monospace;
       font-weight: bold;
     }
     &__container {
-      display: flex;
-      justify-content: space-between;
-      .home__left,
-      .home__right {
-        width: 49%;
+      .home__left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 300px;
+        .ipOhDr {
+          max-width: 800px;
+        }
+        .img {
+          max-width: 800px;
+
+          img {
+            width: 100%;
+          }
+        }
       }
-    }
-    &__container.active {
-      flex-direction: column;
-      .home__left,
       .home__right {
-        width: 100%;
+        font-family: "Roboto Mono", monospace;
+        font-weight: 200;
+        margin-top: 20px;
+        padding: 0 20px;
       }
     }
   }
