--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,7 +11,7 @@ body {
     position: sticky;
     background-color: #d37b88;
     width: 100%;
-    height: 60px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,6 +19,14 @@ body {
       margin-left: 20px;
       font-family: "Roboto Mono", monospace;
       font-weight: 500;
+
+      display: flex;
+      align-items: center;
+
+      img {
+        width: 70px;
+        margin-right: 10px;
+      }
     }
     .select__date {
       margin-right: 20px;
